--- a/src/Entete.scss
+++ b/src/Entete.scss
@@ -7,10 +7,21 @@
     height: 80px;
     font-size: 1.1em;
   
-    &>* {
+    ul {
       display: flex;
       padding: 0 20px;
       list-style: none;
+      margin-right: 110px;
+    }
+
+    li {
+        background-color:#007ea7;
+        margin-left: 30px;
+        margin-top: 25px;
+        border: 5px solid #00171f;
+        border-bottom: none;
+        padding: 20px;
+        padding-top: 10px;
     }
 
     .logo{
