--- a/src/ListeProjets.scss
+++ b/src/ListeProjets.scss
@@ -16,6 +16,11 @@
 
     .info .titre {
         margin-bottom: -5px;
+        margin-top: -3px;
+    }
+
+    .info .desc {
+        margin-top: -2px;
     }
 
 }
