--- a/src/Entete.scss
+++ b/src/Entete.scss
@@ -24,6 +24,26 @@
         padding-top: 10px;
     }
 
+    a {
+      text-decoration: none;
+    }
+
+    a:link {
+      color: white;
+    }
+
+    a:visited {
+      color: white;
+    }
+
+    a:hover {
+      color: black;
+    }
+
+    a:active {
+      color: black;
+    }
+
     .logo{
         width: 10%;
         
