--- a/src/Projet.scss
+++ b/src/Projet.scss
@@ -1,13 +1,13 @@
 .Projet {
     width: 250px;
-    height: 250px;
+    height: 270px;
     margin: 10px;
     padding: 5px;
     background-color: #007ea7;
     color: white;
     border: 1px solid #555;
     border-radius: 10px 10px 0px 10px;
-    overflow: hidden;
+    overflow: inherit;
     text-align: center;
   
 
